tests/positive/issue2296/M.juvix
module M;

f : (F : Type → Type) → (A : Type) → F A → F A;
f _ _ x := x;
