tests/negative/MicroJuvix/FunctionPattern.juvix
module FunctionPattern;
  inductive T {
    A : T;
  };

  f : (T → T) → T;
  f A ≔ A;
end;
